<resources>
    <string name="app_name">Film</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail_film">Detail Film</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="share_text">Ayo tonton %s</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="title_activity_detail_tv">DetailTvActivity</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="screenplay">Screenplay</string>
    <string name="overview">Overview</string>
    <string name="creator">Creator</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="find_your_favorite_film">FIND YOUR FAVORITE FILM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>