<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_tvshow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/film"

            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="#0F28B1"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="@string/title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_favorite_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_year"
            tools:text="@string/genre" />

            <TableLayout
                android:id="@+id/table1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_genre"
                tools:ignore="MissingConstraints">

                <TableRow
                    android:layout_width="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/director"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_director"
                        android:layout_width="146dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:maxLines="3"
                        android:textColor="@color/black"
                        tools:text="@string/director" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_genre"
                app:layout_constraintLeft_toRightOf="@id/table1">

                <TableRow
                    android:layout_width="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/screenplay"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_screenplay"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:maxLines="3"

                        android:textColor="@color/black"
                        tools:text="@string/screenplay" />
                </TableRow>
            </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_detail"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/table1">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/overview"
                android:textColor="#03514A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                tools:text="@string/overview" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>